till close survey send email part

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -8,6 +8,8 @@
     <link th:href="@{webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
           rel="stylesheet" media="screen"/>
 
+    <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+
     <!-- Custom CSS -->
     <link type="text/css" th:href="@{/css/style.css}" rel="stylesheet" media="screen"/>
     <link type="text/css" th:href="@{/css/5star.css}" rel="stylesheet" media="screen"/>
