--- a/src/main/resources/templates/survey/setsurvey.html
+++ b/src/main/resources/templates/survey/setsurvey.html
@@ -13,43 +13,45 @@
             <div class="jumbotron">
                 <h1 class="text-center" th:text="#{create.survey.heading}"></h1>
                 <p class="lead" th:text="#{create.survey.subheading}"></p>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form class="form-group" id="setSurvey" method="post">
-                                <div class="well">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div id="placeHolder"></div>
-                                            <p> Set Survey </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <br/>
-                                            <a class="btn btn-primary btn-md btn-block"
-                                               th:href="@{/savequestion}"
-                                               th:text="#{save.question.button.text}"></a>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <br/>
-                                            <a class="btn btn-success btn-md btn-block"
-                                               th:href="@{/publishsurvey}"
-                                               th:text="#{publish.survey.button.text}"></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
             </div>
-
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="well">
+                <form class="form-group" id="setSurvey" th:action="@{/setsurvey}" method="post" th:object="${__${'newsurvey'}__}">
+                    <div class="form-group input-group mb-3">
+                        <h4 style="margin-left: 20px" id="surveytype">Survey Type</h4>
+                        <select class="custom-select" id="inputGroupSelect01" th:field="*{surveyType}">
+                            <option selected="selected" value="">Choose...</option>
+                            <option value="General Survey">General Survey</option>
+                            <option value="Close Survey">Close Survey</option>
+                            <option value="Open Survey">Open Survey</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <h4 style="margin-left: 20px" id="surveyname">Survey Name</h4>
+                        <input type="text" value="" th:field="*{surveyName}" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <h4 style="margin-left: 20px" id="surveydesc">Survey Description</h4>
+                        <input type="text" value="" th:field="*{surveyDesc}" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <h4 style="margin-left: 20px" id="endtime">Survey Expiration Time</h4>
+                        <input type="text" value="" th:field="*{days}" class="form-control" placeholder="days"/>
+                        <input type="text" value="" th:field="*{hours}" class="form-control" placeholder="hours"/>
+                        <input type="text" value="" th:field="*{minutes}" class="form-control" placeholder="minutes"/>
+                    </div>
+                    <button type="submit" class="btn btn-primary" th:text="#{form.submit}"></button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div th:replace="common/header :: before-body-scripts"/>
 
 </body>
