--- a/src/main/resources/templates/surveyor/surveyorHome.html
+++ b/src/main/resources/templates/surveyor/surveyorHome.html
@@ -20,7 +20,7 @@
                                 <div class="well">
                                     <div class="row">
                                         <div class="col-lg-6 span4">
-                                            <a href="/createsurvey">
+                                            <a href="/setsurvey">
                                                 <img class="img-circle"
                                                      th:src="@{/images/create_survey.png}"
                                                      alt="Create New Survey" width="140" height="140"/>
