--- a/src/main/resources/templates/surveyor/surveyResponse.html
+++ b/src/main/resources/templates/surveyor/surveyResponse.html
@@ -21,9 +21,18 @@
                                     <div class="row">
 
                                         <h2>List of surveys...</h2>
+
                                         <div class="btn-group-vertical" th:each="survey : ${surveys}">
-                                            <a  th:href="@{/surveyor/stats(description=${survey})}" class="btn btn-primary" th:text="${survey}"></a>
+                                           <!--<span th:if="${error != null}">-->
+                                               <!--<a th:text="${error}" href="/surveyorresponse"></a>-->
+
+                                           <!--</span> &lt;!&ndash;<span th:if="${survey !=null}">&ndash;&gt;-->
+                                            <a  th:href="@{/surveyor/stats(description=${survey})}" class="btn btn-primary"
+                                                th:text="${survey}" name="name"></a>
+
                                         </div>
+
+
                                     </div>
                                 </div>
                             </div>
