--- a/src/main/resources/templates/survey/verified.html
+++ b/src/main/resources/templates/survey/verified.html
@@ -18,14 +18,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="well">
-                                    <h3> Congratulations! </h3>
-                                    <h3>Survey link was successfully sent to all the participants.</h3>
-                                    <br/>
-                                    <hr/>
-                                    <br/>
-                                    <a class="btn btn-primary btn-lg btn-block"
-                                       th:href="@{/surveyorhome}"
-                                       th:text="#{general.survey.publish.button.text}"></a>
+                                    <!--<h3> Congratulations! </h3>-->
+                                    <h3>Survey link was successfully sent to your email.</h3>
                                 </div>
                             </div>
                         </div>
