--- a/src/main/resources/templates/surveyee/showSurvey.html
+++ b/src/main/resources/templates/surveyee/showSurvey.html
@@ -15,70 +15,99 @@
                 <p class="lead" th:text="#{show.survey.subheading}"></p>
                 <div class="container">
                     <div class="row">
-                        <h2 th:text="${survey.description}"></h2>
-
+                        <h2 th:text="${survey.surveyName}"></h2>
                         <ol class="table table-striped">
-                            <!--<tr>-->
-                                <!--<th>q_id</th>-->
-                                <!--<th>description</th>-->
-                            <!--</tr>-->
-                            <li th:each="question : ${questions}">
+                            <form th:id="responseForm" th:with="surveyId=${survey.getSurveyId()}">
+                                <li th:each="question, iterStat : ${questions}">
+                                    <div th:with="quesId=${question.getqId()}"  th:text="${question.description}" th:id="'question'+${iterStat.index}"></div>
 
-                                <!--<div th:text="${question.qId}"></div>-->
-                                <!--<td th:text="${question.qType}"></td>-->
-                                <div th:text="${question.description}"></div>
+                                    <div th:if="${question.qType == 'singleanswer'}">
+                                        <input type="text" th:id="'shortAns'+${iterStat.index}"/>
+                                    </div>
 
-                                <div th:if="${question.qType == 'text'}">
-                                    <input type="text"  />
-                                </div>
+                                    <div th:if="${question.qType == 'starrating'}">
+                                        <ul class="rate-area" th:id="'ratingQues'+${iterStat.index}">
+                                            <input type="radio" id="5-star" th:name="'rating'+${iterStat.index}"
+                                                   value="5" onclick="getStarQuesRepsonse(5,quesId,surveyId)"/>
+                                            <label for="5-star" title="Amazing" style="height: 70px; width: 70px">5
+                                                stars</label>
+                                            <input type="radio" id="4-star" th:name="'rating'+${iterStat.index}"
+                                                   value="4" onclick="getStarQuesRepsonse(4)"/>
+                                            <label for="4-star" title="Good" style="height: 70px; width: 70px">4
+                                                stars</label>
+                                            <input type="radio" id="3-star" th:name="'rating'+${iterStat.index}"
+                                                   value="3" onclick="getStarQuesRepsonse(3)"/>
+                                            <label for="3-star" title="Average" style="height: 70px; width: 70px">3
+                                                stars</label>
+                                            <input type="radio" id="2-star" th:name="'rating'+${iterStat.index}"
+                                                   value="2" onclick="getStarQuesRepsonse(2)"/>
+                                            <label for="2-star" title="Not Good" style="height: 70px; width: 70px">2
+                                                stars</label>
+                                            <input type="radio" id="1-star" th:name="'rating'+${iterStat.index}"
+                                                   value="1" onclick="getStarQuesRepsonse(1)"/>
+                                            <label for="1-star" title="Bad" style="height: 70px; width: 70px">1
+                                                star</label>
+                                        </ul>
+                                        <div>
+                                            <p></p>
+                                        </div>
 
-                                <div th:if="${question.qType == 'rating'}">
-                                    <input type="text"/>
-                                </div>
+                                    </div>
+                                    <br/>
+                                    <div>
+                                        <p></p>
+                                    </div>
 
-                                <div th:if="${question.qType == 'dropdown'}">
+                                    <div th:if="${question.qType == 'dropdown'}">
 
-                                        <select>
+                                        <select th:id="'multipleChoice'+${iterStat.index}">
                                             <option th:each="option : ${question.options}" th:value="response">
                                                 <span th:text="${option.optionValue}"></span>
                                             </option>
                                         </select>
 
-                                </div>
+                                    </div>
 
-                                <div th:if="${question.qType == 'radio'}">
+                                    <div th:if="${question.qType == 'radio'}">
 
                                         <p th:each="option : ${question.options}"
-                                               th:if="${question.options.size() > 0}"
-                                               th:value="${option.optionValue}">
-                                            <input type="radio" name="radio1"
+                                           th:if="${question.options.size() > 0}"
+                                           th:value="${option.optionValue}">
+                                            <input type="radio" th:name="'radio'+${iterStat.index}"
                                                    th:checked="${#strings.equals('response', option.optionValue)}">
                                             </input>
                                             <span th:text="${option.optionValue}"/><br></br>
                                         </p>
 
 
-                                </div>
+                                    </div>
 
-                                <div th:if="${question.qType == 'checkbox'}">
+                                    <div th:if="${question.qType == 'checkbox'}">
 
                                         <p th:each="option : ${question.options}"
-                                               th:if="${question.options.size() > 0}"
-                                               th:value="${option.optionValue}">
+                                           th:if="${question.options.size() > 0}"
+                                           th:value="${option.optionValue}">
                                             <input type="checkbox"
                                                    th:checked="${#strings.equals('response', option.optionValue)}">
                                             </input>
                                             <span th:text="${option.optionValue}"/><br></br>
                                         </p>
 
-                                </div>
+                                    </div>
 
-                            </li>
+                                    <br/><br/>
+
+                                </li>
+                                <br/>
+                            </form>
                         </ol>
 
                     </div>
                 </div>
-                <a type="submit" class="btn btn-success btn-md btn-block" value="Submit" th:href="@{/submitSurvey(token=${token})}" >Submit</a>
+                <div id="placeholder"></div>
+                <a type="submit" class="btn btn-success btn-md btn-block" value="Submit"
+                   th:href="@{/submitSurvey}">Submit</a>
+                <!--th:href="@{/submitSurvey(token=${token})}">Submit</a>-->
             </div>
         </div>
     </div>
