--- a/src/main/resources/templates/surveyee/submitEmail.html
+++ b/src/main/resources/templates/surveyee/submitEmail.html
@@ -20,9 +20,10 @@
                                 <div class="well">
                                     <div class="row">
                                         <span>
-                                            <form id="confirmationEmailForm" th:href="/sendEmail(email=${email})" method="post">
-                                                <input type="email" id="email" class="form-control" placeholder="Enter your email"/>
-                                                <button type="submit" class="btn btn-success" value="Confirm" >Confirm</button>
+                                            <!--th:action="/sendEmailVerification(email=${email})}"-->
+                                            <form id="confirmationEmailForm" th:object="${emailaddresses}">
+                                                <input type="email" id="email" th:field="*{emailAddresses}" class="form-control" placeholder="Enter your email"/>
+                                                <a th:href="@{/submitSurvey}"  type="submit" class="btn btn-success" value="Confirm" >Confirm</a>
                                                 <a type="submit" class="btn btn-danger" value="Cancel">Cancel</a>
                                             </form>
                                         </span>
