added surveyee part: list of surveys and full survey

--- a/src/main/resources/templates/survey/publishGeneralSurvey.html
+++ b/src/main/resources/templates/survey/publishGeneralSurvey.html
@@ -23,6 +23,9 @@
                                     <br/>
                                     <hr/>
                                     <br/>
+                                    <img class="btn btn-primary btn-lg btn-block"
+                                       th:src="@{/generate/QR/${url}}"/>
+
                                     <a class="btn btn-primary btn-lg btn-block"
                                        th:href="@{/surveyorhome}"
                                        th:text="#{general.survey.publish.button.text}"></a>
