--- a/src/main/resources/templates/surveyor/stats.html
+++ b/src/main/resources/templates/surveyor/stats.html
@@ -19,7 +19,7 @@
                                     <div class="well">
 
 
-                                        <div class="row">
+                                        <div class="row" th:if="${stats != null}">
 
                                             <h2  class="btn btn-success btn-lg btn-block" th:text="#{survey.stats.heading1}"/>
                                             <!--<div id="survey_stats" class="stats" >-->
