--- a/src/main/resources/templates/surveyelements/Question.html
+++ b/src/main/resources/templates/surveyelements/Question.html
@@ -8,7 +8,8 @@
 <div class="container" th:fragment="multipleChoiceQuestion">
     <div class="row">
         <div class="col-md-12">
-            <div class="jumbotron" onclick="editMultipleChoiceQuestion()">
+            <div class="jumbotron">
+                <p id="questionType" hidden="hidden">MultipleChoice</p>
                 <h4 id="questionMC">New Question here...</h4>
                 <div class="row">
                     <div class="col-md-12">
@@ -72,6 +73,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="jumbotron" onclick="editTrueFalseQues()">
+                <p id="questionType" hidden="hidden">TrueFalse</p>
                 <h4 id="questionTF">New Question here...</h4>
                 <div class="row">
                     <div class="col-md-12">
@@ -116,6 +118,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="jumbotron" onclick="editShortAnsQues()">
+                <p id="questionType" hidden="hidden">ShortAnswer</p>
                 <h4 id="questionSA">New Question here...</h4>
                 <div class="row">
                     <div class="col-md-12">
@@ -158,6 +161,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="jumbotron" onclick="editStarRatingQues()">
+                <p id="questionType" hidden="hidden">StarRating</p>
                 <h4 id="questionStar">New Question here...</h4>
                 <div class="row">
                     <div class="col-md-12">
@@ -206,6 +210,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="jumbotron" onclick="editRadioQuestion()">
+                <p id="questionType" hidden="hidden">Radio</p>
                 <h4 id="questionRadio">New Question here...</h4>
                 <div class="row">
                     <div class="col-md-12">
@@ -275,6 +280,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="jumbotron" onclick="editDropdownQuestion()">
+                <p id="questionType" hidden="hidden">Dropdown</p>
                 <h4 id="questionDropdown">New Question here...</h4>
                 <div class="row">
                     <div class="col-md-12">
